Fixed colour contrast issues of the links in the right-nav
Updated side-toc.sass to fix the colour contrast issues

--- a/source-assets/styles2022/sass/custom/side-toc.sass
+++ b/source-assets/styles2022/sass/custom/side-toc.sass
@@ -61,13 +61,14 @@ $you_are_here_weight: 600
 #_side-toc-page
   
   a
-    color: $c_jungle
+    color: $c_dark_jungle
     padding: 0.4rem 0
+    font-weight: 500
 
     &:focus,
     &:hover,
     &:active
-      background-color: transparent
+      // background-color: transparent
       text-decoration: underline
 
   
